// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components ImageButton propagates href to OptionalLink 1`] = `
<div>
  <div
    class="sc-elDHXC gPeVyn"
  >
    <a
      class="sc-brayMQ hPonWa"
      href="/some/path"
    >
      <div
        class="sc-fQpSrZ hGnagO"
      >
        <img
          src=""
        />
      </div>
    </a>
  </div>
</div>
`;

exports[`components ImageButton propagates onClick to OptionalLink 1`] = `
<div>
  <div
    class="sc-elDHXC gPeVyn"
  >
    <div
      class="sc-gJhJfT fdCJqJ"
    >
      <div
        class="sc-fQpSrZ hGnagO"
      >
        <img
          src=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components ImageButton renders label and image 1`] = `
<div>
  <div
    class="sc-elDHXC gPeVyn"
  >
    <div
      class="sc-gJhJfT fdCJqJ"
    >
      <div
        class="sc-fQpSrZ hGnagO"
      >
        <img
          src="imgsource.jpg"
        />
        my label
      </div>
    </div>
  </div>
</div>
`;
